2007-03-29  Christian Persch  <chpe@gnome.org>

	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):

	#if 0 some currently unused code. Bug #423907.

2007-03-25  Christian Persch  <chpe@gnome.org>

	* src/ephy-statusbar.c: (create_statusbar_progress):

	Make progressbar taller. Bug #421060.

2007-03-16  Bastien Nocera  <hadess@hadess.net>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	Fix Epiphany not finding some Gecko plugins when
	running in a multilib environment (Closes: #407419)

2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Add translator's comment for 'token'.

2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoCookiePromptService.cpp:
	* embed/mozilla/GeckoCookiePromptService.h:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/MozRegisterComponents.cpp:

	Implement nsICookiePromptService. Bug #337826.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Bump version to 2.19.0, and set API version to 2.19.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* *:

	Correct FSF address. Bug #409075, patch by John Millikin.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-03-11  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.0 ===

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Set version to 2.18.0.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Regenerate the type builtins when the Makefile changes. Should fix bug
	#416994; no code freeze break since it's only fixing a build problem.

2007-03-07  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* data/bme.desktop.in.in:
	* data/epiphany.desktop.in.in:

	"Application" is not a valid category in the freedesktop specification.

2007-03-04  Christian Persch  <chpe@svn.gnome.org>
