@@ -1,3 +1,12 @@
+2007-04-02  Diego Escalante Urrelo <diegoe@gnome.org>
+
+	* src/bookmarks/ephy-topic-action.c:
+
+	Allow the user to select a different bookmark topic on the toolbar by
+	just moving the mouse. Old behaviour forced the user to click each
+	topic button to activate the menu, now only the first click is
+	required. Bug #363848. Patch by John Millikin.
+
 2007-03-29  Christian Persch  <chpe@gnome.org>
 
 	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):
